# tooling-language-server

./: .editorconfig  .gitattributes  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: top-rokit-tools.txt
crates/clients/: Cargo.toml
crates/clients/src/: lib.rs
crates/clients/src/crates/: mod.rs  requests.rs
crates/clients/src/crates/models/: crates_io.rs  index.rs
crates/clients/src/github/: consts.rs  requests.rs
crates/clients/src/github/models/: git.rs  mod.rs  repository.rs
crates/clients/src/npm/: mod.rs  requests.rs
crates/clients/src/npm/models/: registry.rs
crates/clients/src/shared/: error.rs
crates/clients/src/wally/: requests.rs
crates/clients/src/wally/models/: metadata.rs
crates/deputy/: Cargo.toml
crates/deputy-clients/: Cargo.toml
crates/deputy-clients/src/crates/: cache.rs  (+1 more)
crates/deputy-parser/: Cargo.toml
crates/deputy-parser/src/: cargo.rs  rokit.rs  shared.rs  utils.rs  wally.rs
crates/deputy-tools/: Cargo.toml
crates/deputy-tools/assets/: top-crates-io-packages.txt  top-rokit-tools.txt
crates/deputy-tools/src/: lib.rs  tools.rs
crates/deputy-tools/src/cargo/: completion.rs  constants.rs  diagnostics.rs  hover.rs  mod.rs  util.rs
crates/deputy-tools/src/npm/: completion.rs  constants.rs  diagnostics.rs  hover.rs  mod.rs
crates/deputy-tools/src/rokit/: completion.rs  constants.rs  diagnostics.rs  hover.rs  mod.rs
crates/deputy-tools/src/shared/: actions.rs  resolve_context.rs
crates/deputy-tools/src/wally/: completion.rs  diagnostics.rs  hover.rs  mod.rs
crates/deputy-versioning/: Cargo.toml
crates/deputy-versioning/src/: lib.rs
crates/deputy/src/: main.rs  server.rs  tracing.rs
crates/deputy/src/cli/: serve.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  npm.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tooling-language-server/: Cargo.toml
crates/tooling-language-server/src/: main.rs  server.rs
crates/tools/: Cargo.toml
crates/tools/assets/: top-npm-packages.txt
crates/tools/src/: tools.rs
crates/tools/src/cargo/: completion.rs  diagnostics.rs  hover.rs  mod.rs  util.rs
crates/tools/src/npm/: completion.rs  diagnostics.rs  hover.rs  mod.rs
crates/tools/src/rokit/: completion.rs  diagnostics.rs  hover.rs  mod.rs
crates/tools/src/shared/: completion_map.rs  markdown_builder.rs  strsim.rs
crates/tools/src/wally/: completion.rs  diagnostics.rs  hover.rs  mod.rs
crates/versioning/: Cargo.toml
crates/versioning/src/: version.rs
editors/vscode/: .gitignore  .vscodeignore  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
editors/vscode/configs/: zap.language-configuration.json
editors/vscode/src/: auth.ts  client.ts  extension.ts  fs.ts  notifications.ts  requests.ts
editors/vscode/syntaxes/: zap.tmLanguage.json
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: extension.rs  github_auth.rs  tooling-language-server.rs  util.rs
src/: cli.rs  main.rs  server.rs  state.rs  tracing.rs
src/cli/: mod.rs  serve.rs  tracing.rs
src/clients/: mod.rs
src/clients/crates/: cache.rs  consts.rs  mod.rs  requests.rs
src/clients/github/: cache.rs  consts.rs  mod.rs  requests.rs
src/clients/npm/: cache.rs  consts.rs  mod.rs  requests.rs
src/clients/wally/: cache.rs  mod.rs  requests.rs
src/crates/: cache.rs  consts.rs  crates_io.rs  errors.rs  mod.rs  requests.rs
src/github/: cache.rs  consts.rs  errors.rs  mod.rs  repository.rs  requests.rs
src/github/models/: mod.rs
src/lang/: mod.rs
src/lang/json/: array.rs  bool.rs  error.rs  map.rs  mod.rs  null.rs  number.rs  string.rs
src/lang/toml/: array.rs  bool.rs  float.rs  integer.rs  mod.rs  string.rs  table.rs
src/manifest/: mod.rs  parser.rs  tests.rs  tool_spec.rs
src/parser/: cargo.rs  document.rs  file.rs  language.rs  mod.rs  npm.rs  query_strings.rs  query_structs.rs  query_utils.rs  rokit.rs  shared.rs  tests.rs  token.rs  utils.rs  wally.rs
src/parser/query_fns/: cargo_toml.rs  mod.rs  package_json.rs  rokit_toml.rs  wally_toml.rs
src/parser/query_strings/: cargo_toml.scm  mod.rs  package_json.scm  rokit_toml.scm  wally_toml.scm
src/server/: actions.rs  backend.rs  conversion.rs  document.rs  events.rs  initialize.rs  language_server.rs  lsp.rs  mod.rs  notifications.rs  requests.rs  settings.rs  state.rs  transport.rs  waiting.rs  workspace_diagnostics.rs
src/server/responders/: code_action.rs  diagnostic.rs  diagnostics.rs  hover.rs  init.rs  initialize.rs  mod.rs
src/toml/: error.rs  mod.rs  parser.rs  tests.rs  token.rs
src/toml/tests/: integers.rs  mod.rs  suites.rs
src/toml/token/: error.rs  kind.rs  mod.rs  raw.rs  symbol.rs  value.rs
src/tools/: mod.rs  name.rs  omni.rs  tool.rs
src/tools/aftman/: mod.rs
src/tools/cargo/: completion.rs  constants.rs  dependency_spec.rs  diagnostics.rs  hover.rs  lockfile.rs  manifest.rs  mod.rs  util.rs
src/tools/foreman/: mod.rs
src/tools/javascript/: completion.rs  lockfile.rs  manifest.rs  mod.rs
src/tools/npm/: completion.rs  constants.rs  diagnostics.rs  hover.rs  lockfile.rs  manifest.rs  mod.rs
src/tools/rokit/: completion.rs  constants.rs  diagnostics.rs  hover.rs  mod.rs
src/tools/shared/: actions.rs  completion.rs  completion_map.rs  diagnostics.rs  manifest.rs  markdown_builder.rs  mod.rs  prefix_map.rs  resolve_context.rs  semver.rs  strsim.rs  tool_spec.rs
src/tools/toolchain/: compat.rs  completion.rs  constants.rs  diagnostics.rs  manifest.rs  mod.rs  tool_spec.rs
src/tools/toolchain_managers/: diagnostics.rs  mod.rs
src/tools/util/: formatting.rs  mod.rs  spec.rs
src/tools/wally/: completion.rs  constants.rs  dependency_spec.rs  diagnostics.rs  hover.rs  manifest.rs  mod.rs
src/util/: cli.rs  futures.rs  mod.rs  negotiation.rs  position.rs  request_cache_map.rs  request_error.rs  stdio.rs  transport.rs  uri.rs  version.rs  version_req.rs  versions.rs
src/util/requests/: cache_map.rs  client.rs  error.rs  mod.rs  request.rs
src/util/toml/: error.rs  mod.rs  string.rs  table.rs
(+40 files in other folders)
