[workspace]
resolver = "2"
default-members = ["crates/deputy"]
members = [
	"crates/deputy",
	"crates/deputy-clients",
	"crates/deputy-parser",
	"crates/deputy-tools",
	"crates/deputy-versioning",
]

[profile.release]
opt-level = "z"
strip = true
lto = true

[workspace.package]
version = "0.5.0"
edition = "2024"
publish = false
license = "MIT"

[workspace.lints.clippy]
all = { level = "deny", priority = -3 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }

cargo_common_metadata = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
module_inception = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }

[workspace.dependencies.async-language-server]
git = "https://github.com/filiptibell/async-language-server"
rev = "a0ab43be5d01b9eade82393431ac7adf0ec51d8e"
features = ["tracing", "tree-sitter"]
