[package]
name = "clients"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
name = "clients"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
dashmap = "6.1"
thiserror = "2.0"
url = "2.4"

serde = "1.0"
serde_json = "1.0"

moka = { version = "0.12", features = ["future"] }

tokio = { version = "1.45", default-features = false, features = ["rt", "sync", "time"] }
tracing = "0.1"

versioning = { path = "../versioning" }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "gzip"]
