[package]
name = "tools"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[lib]
name = "tools"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
strsim = "0.11"

futures = "0.3"

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"

async-language-server = { workspace = true }

clients = { path = "../clients" }
parser = { path = "../parser" }
versioning = { path = "../versioning" }
